--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,7 @@
 image: gitpod/workspace-full
 
 tasks:
-  - init: ./gradlew jsBrowserDevelopmentRun --continuous
-    command: npm install
+  - init: ./gradlew jsBrowserRun
 ports:
   - port: 8080
     onOpen: open-preview
